# funds-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2026_01_29_0049-2e72922adacc_add_accounts.py  2026_01_29_0124-4e3863660ca2_add_users.py  2026_01_29_0125-633655d3351a_add_accounts.py  2026_01_30_0010-2ed26f640a85_add_savings_model.py  2026_02_01_2010-dd632534f889_delete_index_in_accounts.py  2026_02_17_1547-e6824971ae2b_create_goal_table.py  2026_02_20_0014-8f177d8063b4_add_rules_in_accounts_histories_rename_.py  2026_02_21_1520-2f05172770ce_fix_float_types_in_tables.py  2026_02_26_1314-6de8dc4e5f0b_fix_account_with_history_with_date.py  2026_02_26_1825-c822ec2e8872_update_goal_model.py  2026_03_02_0815-611b12c44806_fix_constraints.py
src/: main.py
src/accounts/: cache.py  comands.py  domain.py  entities.py  events.py  exceptions.py  publisher.py  repository.py  service.py  values.py
src/api/: schemas.py
src/core/: domain.py  exceptions.py  logger.py  settings.py
src/domain/: commands.py  dto.py  exceptions.py  values.py
src/infra/: __init__.py  admin.py  broker.py  database.py  exceptions.py  uow.py
src/savings/: domain.py  repository.py  service.py  values.py
src/users/: dependencies.py  domain.py  repository.py  service.py  values.py
tests/: conftest.py
tests/api/: conftest.py  test_account.py  test_accounts.py  test_goals.py  test_history.py
tests/fixtures/: __init__.py  accounts.py  goals.py  histories.py  users.py
tests/integration/: test_account.py  test_accounts.py  (+2 more)
(+78 files in other folders)
