[project]
name = "funds-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "taskiq>=0.12.1",
    "uvicorn>=0.40.0",
]
