[project]
name = "funds-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "starlette-admin>=0.16.0",
    "taskiq-aio-pika>=0.5.0",
    "taskiq-fastapi>=0.4.0",
    "taskiq-redis>=1.2.1",
    "tzdata>=2025.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "faker>=40.1.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "taskiq[opentelemetry]>=0.12.1",
]
